# Fractal

./: .gitignore  CMakeLists.txt  Fractales.c  Functions.c  Functions.h  README.md
include/: Functions.h
src/: Functions.c  main.c
